--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build:tauri": "npm run fetch:codex-acp && npm run build",
     "fetch:codex-acp": "node scripts/fetch-codex-acp.mjs",
     "test": "vitest --browser --run",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write",
     "preview": "vite preview",
     "tauri": "tauri",
     "storybook": "storybook dev -p 6006",
@@ -37,12 +41,24 @@
     "@types/hast": "^3.0.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-react": "^4.6.0",
     "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^17.0.0",
     "playwright": "^1.57.0",
+    "prettier": "^3.8.0",
     "storybook": "^10.1.11",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.53.0",
     "vite": "^7.0.4",
     "vitest": "^4.0.16"
   }
