--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@tauri-apps/plugin-dialog": "^2.5.0",
     "@tauri-apps/plugin-opener": "^2",
     "katex": "^0.16.27",
+    "i18next": "^23.11.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^14.1.3",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
