--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,5 @@ async-trait = "0.1"
 tokio = { version = "1", features = ["process", "io-util", "macros", "rt", "time"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 toml = "0.8"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
