--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.5.0",
     "@tauri-apps/plugin-opener": "^2",
-    "katex": "^0.16.27",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "i18next": "^23.11.5",
+    "katex": "^0.16.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^14.1.3",
