--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "globals": "^17.0.0",
     "playwright": "^1.57.0",
     "prettier": "^3.8.0",
+    "react-test-renderer": "^19.2.3",
     "storybook": "^10.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.53.0",
