--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "quality:gate": "node scripts/quality-gate.mjs"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
