Remove react-test-renderer usage

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/addon-vitest": "^10.1.11",
     "@storybook/react-vite": "^10.1.11",
     "@tauri-apps/cli": "^2",
+    "@testing-library/react": "^16.3.2",
     "@types/hast": "^3.0.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -63,9 +64,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^17.0.0",
+    "happy-dom": "^20.3.9",
     "playwright": "^1.57.0",
     "prettier": "^3.8.0",
-    "react-test-renderer": "^19.2.3",
     "storybook": "^10.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.53.0",
