--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -35,9 +35,7 @@ jobs:
           cache: npm
 
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@1.77.0
-        with:
-          toolchain: 1.77.0
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-24.04'
