--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -80,4 +80,9 @@ jobs:
           name: ${{ env.RELEASE_TAG }}
           target_commitish: ${{ github.sha }}
           files: |
-            artifacts/**/*
+            artifacts/**/bundle/**/*.dmg
+            artifacts/**/bundle/**/*.exe
+            artifacts/**/bundle/**/*.msi
+            artifacts/**/bundle/**/*.deb
+            artifacts/**/bundle/**/*.rpm
+            artifacts/**/bundle/**/*.AppImage
