--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
