--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ async-trait = "0.1"
 tokio = { version = "1", features = ["process", "io-util", "macros", "rt", "time"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 toml = "0.8"
+toml_edit = "0.22"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 portable-pty = "0.8"
