--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -54,7 +54,7 @@ jobs:
           - windows-latest
     defaults:
       run:
-        working-directory: src-tauri
+        working-directory: codex-upstream/codex-rs/desktop
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -77,8 +77,8 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-            src-tauri/target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('src-tauri/Cargo.lock') }}
+            codex-upstream/codex-rs/target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('codex-upstream/codex-rs/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
 
@@ -97,7 +97,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Clippy
-        run: cargo clippy --locked --all-targets -- -D warnings
+        run: cargo clippy --all-targets -- -D warnings
 
       - name: Tests
-        run: cargo test --locked
+        run: cargo test
